// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footer custom font size 1`] = `
.c4 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 12px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c4 i.margin-left {
  margin-left: 8px;
}

.c4 i.margin-right {
  margin-right: 8px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a {
  color: inherit;
}

.c4:hover {
  color: #3498db;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c2 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c5 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="helperContent c1"
    size={12}
  >
    <img
      alt=""
      className="image c2"
      height={40}
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
      width={40}
    />
    <div>
      <div
        className="text c3"
        fontWeight="inherit"
        size={12}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="link c4"
        disabled={false}
        size={12}
        type="#59636f"
      >
        <a
          href="#"
        >
          Get support
        </a>
      </div>
    </div>
  </div>
  <div
    className="actionsContainer c5"
  />
</div>
`;

exports[`Storyshots Footer extended style 1`] = `
.c5 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c5 i.margin-left {
  margin-left: 8px;
}

.c5 i.margin-right {
  margin-right: 8px;
}

.c5 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 > a {
  color: inherit;
}

.c5:hover {
  color: #3498db;
}

.c4 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c3 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c2 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .text {
  margin-bottom: 8px;
}

.c2 > .image {
  margin-right: 16px;
}

.c1 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c6 > * {
  margin-left: 16px;
}

.c0 {
  border-color: orangered;
}

.c0 .image {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c0 .text {
  text-shadow: 0 0 8px tomato;
}

.c0 .link {
  border: solid 1px deeppink;
}

<div
  className="c0 c1"
>
  <div
    className="helperContent c2"
    size={16}
  >
    <img
      alt=""
      className="image c3"
      height={40}
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
      width={40}
    />
    <div>
      <div
        className="text c4"
        fontWeight="inherit"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="link c5"
        disabled={false}
        size={16}
        type="#59636f"
      >
        <span
          onClick={[Function]}
        >
          Get support
        </span>
      </div>
    </div>
  </div>
  <div
    className="actionsContainer c6"
  />
</div>
`;

exports[`Storyshots Footer with one action 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c6 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c6:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c6:focus {
  box-shadow: none;
}

.c6:hover .icon,
.c6:focus .icon {
  color: white;
}

.c6 > .icon {
  color: rgba(0,0,0,0.32);
}

.c6:hover,
.c6:focus {
  color: #3498db;
  border-color: #3498db;
}

.c6:hover > .icon,
.c6:focus > .icon {
  color: #3498db;
}

.c6:disabled,
.c6:disabled .icon,
.c6:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c6:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c4 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c4 i.margin-left {
  margin-left: 8px;
}

.c4 i.margin-right {
  margin-right: 8px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a {
  color: inherit;
}

.c4:hover {
  color: #3498db;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c2 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .text {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c5 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="helperContent c1"
    size={16}
  >
    <img
      alt=""
      className="image c2"
      height={40}
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
      width={40}
    />
    <div>
      <div
        className="text c3"
        fontWeight="inherit"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="link c4"
        disabled={false}
        size={16}
        type="#59636f"
      >
        <span
          onClick={[Function]}
        >
          Get support
        </span>
      </div>
    </div>
  </div>
  <div
    className="actionsContainer c5"
  >
    <button
      className="c6"
      onClick={[Function]}
      size="SMALL"
      type="NEUTRAL"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Footer with two actions 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c6 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c6:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c6:focus {
  box-shadow: none;
}

.c6:hover .icon,
.c6:focus .icon {
  color: white;
}

.c6 > .icon {
  color: rgba(0,0,0,0.32);
}

.c6:hover,
.c6:focus {
  color: #3498db;
  border-color: #3498db;
}

.c6:hover > .icon,
.c6:focus > .icon {
  color: #3498db;
}

.c6:disabled,
.c6:disabled .icon,
.c6:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c6:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #ff4411;
  padding: 0 16px;
}

.c7 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c7:focus {
  box-shadow: none;
}

.c7:hover .icon,
.c7:focus .icon {
  color: white;
}

.c7:hover {
  background-color: #dd3311;
}

.c7:focus {
  background-color: #dd3311;
}

.c7:disabled,
.c7:disabled .icon,
.c7:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c7:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c4 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c4 i.margin-left {
  margin-left: 8px;
}

.c4 i.margin-right {
  margin-right: 8px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a {
  color: inherit;
}

.c4:hover {
  color: #3498db;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c2 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .text {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c5 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="helperContent c1"
    size={16}
  >
    <img
      alt=""
      className="image c2"
      height={40}
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
      width={40}
    />
    <div>
      <div
        className="text c3"
        fontWeight="inherit"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="link c4"
        disabled={false}
        size={16}
        type="#59636f"
      >
        <span
          onClick={[Function]}
        >
          Get support
        </span>
      </div>
    </div>
  </div>
  <div
    className="actionsContainer c5"
  >
    <button
      className="c6"
      onClick={[Function]}
      size="MEDIUM"
      type="NEUTRAL"
    >
      Cancel
    </button>
    <button
      className="c7"
      onClick={[Function]}
      size="MEDIUM"
      type="PRIMARY"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Footer without actions 1`] = `
.c4 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c4 i.margin-left {
  margin-left: 8px;
}

.c4 i.margin-right {
  margin-right: 8px;
}

.c4 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > a {
  color: inherit;
}

.c4:hover {
  color: #3498db;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c2 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .text {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c5 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="helperContent c1"
    size={16}
  >
    <img
      alt=""
      className="image c2"
      height={40}
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
      width={40}
    />
    <div>
      <div
        className="text c3"
        fontWeight="inherit"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="link c4"
        disabled={false}
        size={16}
        type="#59636f"
      >
        <a
          href="#"
        >
          Get support
        </a>
      </div>
    </div>
  </div>
  <div
    className="actionsContainer c5"
  />
</div>
`;

exports[`Storyshots Footer without image 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c5 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c5:focus {
  box-shadow: none;
}

.c5:hover .icon,
.c5:focus .icon {
  color: white;
}

.c5 > .icon {
  color: rgba(0,0,0,0.32);
}

.c5:hover,
.c5:focus {
  color: #3498db;
  border-color: #3498db;
}

.c5:hover > .icon,
.c5:focus > .icon {
  color: #3498db;
}

.c5:disabled,
.c5:disabled .icon,
.c5:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c5:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c3 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c3 i.margin-left {
  margin-left: 8px;
}

.c3 i.margin-right {
  margin-right: 8px;
}

.c3 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 > a {
  color: inherit;
}

.c3:hover {
  color: #3498db;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .text {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c4 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="helperContent c1"
    size={16}
  >
    <div>
      <div
        className="text c2"
        fontWeight="inherit"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
      <div
        className="link c3"
        disabled={false}
        size={16}
        type="#59636f"
      >
        <a
          href="#"
        >
          Get support
        </a>
      </div>
    </div>
  </div>
  <div
    className="actionsContainer c4"
  >
    <button
      className="c5"
      onClick={[Function]}
      size="SMALL"
      type="NEUTRAL"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Footer without link 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c5 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c5:focus {
  box-shadow: none;
}

.c5:hover .icon,
.c5:focus .icon {
  color: white;
}

.c5 > .icon {
  color: rgba(0,0,0,0.32);
}

.c5:hover,
.c5:focus {
  color: #3498db;
  border-color: #3498db;
}

.c5:hover > .icon,
.c5:focus > .icon {
  color: #3498db;
}

.c5:disabled,
.c5:disabled .icon,
.c5:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c5:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: inherit;
}

.c2 {
  box-sizing: border-box;
  border-radius: 100%;
  object-fit: cover;
}

.c1 {
  font-family: Lato,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .text {
  margin-bottom: 8px;
}

.c1 > .image {
  margin-right: 16px;
}

.c0 {
  font-family: Lato,sans-serif;
  background-color: #f6f8f9;
  border-top: solid 1px rgba(0,0,0,0.16);
  padding: 16px 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  align: flex-end;
}

.c4 > * {
  margin-left: 16px;
}

<div
  className="c0"
>
  <div
    className="helperContent c1"
    size={16}
  >
    <img
      alt=""
      className="image c2"
      height={40}
      size={40}
      src="https://crave-whatsgood-sandbox.imgix.net/businesses/32/inventory/8fae5d32-f6d4-47bb-8062-e4e85c47788b.png"
      width={40}
    />
    <div>
      <div
        className="text c3"
        fontWeight="inherit"
        size={16}
        type="#2f313a"
      >
        Have questions about account setup?
      </div>
    </div>
  </div>
  <div
    className="actionsContainer c4"
  >
    <button
      className="c5"
      onClick={[Function]}
      size="SMALL"
      type="NEUTRAL"
    >
      Save
    </button>
  </div>
</div>
`;
